--- a/styles/modules/Occurrences.module.scss
+++ b/styles/modules/Occurrences.module.scss
@@ -41,7 +41,7 @@ $INDENTATION: 1rem;
     flex: 2;
   }
 
-  @include tabletAndLarger {
+  @include desktopAndLarger {
     flex-direction: row;
   }
 }
